<resources>
    <string name="app_name">Shipping It</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_in">Signing In</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="emailhint">Enter your e-mail here...</string>
    <string name="passwordhint">Enter your password here...</string>
    <string name="costs_to_budget">Costs to Budget Chart</string>
    <string name="daily_stats">Daily Statistics Chart</string>
    <string name="personal_data">Personal Data of Workers</string>
    <string name="sent_all">Sent to All Packages Chart</string>
    <string name="add_user">Add Worker</string>
    <string name="logout">Log Out</string>
    <string name="parcel_queue">Parcels at Queue</string>
    <string name="parcels">Parcels at Stock</string>
    <string name="get_parcels">Get New Parcels</string>
    <string name="parcels_stock">Add Parcels to Stock</string>
    <string name="parcels_delivery">Parcels to Deliver</string>
    <string name="petrol">Usage of Petrol</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="age">Year of birth:</string>
    <string name="sex">Gender:</string>
    <string name="pnumber">Phone number:</string>
    <string name="workplace">Workplace:</string>
    <string name="enter_name">Enter name here...</string>
    <string name="enter_surname">Enter surname here...</string>
    <string name="enter_age">Enter year of birth here...</string>
    <string name="enter_pnumber">Enter phone number here...</string>
    <string name="enter_email">Enter e-mail here...</string>
    <string name="enter_sex">Gender</string>
    <string name="enter_workplace">Workplace</string>
    <string-array name="sexes">
        <item>None</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="workplaces">
        <item>None</item>
        <item>Stock Worker</item>
        <item>Courier</item>
    </string-array>
    <string name="pl_num">+48</string>
    <string name="add">Add</string>
    <string name="full_name">Full Name:</string>
    <string name="id">Id:</string>
    <string name="no_data">No Data Found</string>
    <string name="add_data">Add Data</string>
    <string name="add_to_stock">Add To Stock</string>
    <string name="deliver">Deliver</string>
    <string name="deliver_parcel">Deliver To Stock</string>
    <string name="add_parcel">Add Parcel</string>
    <string name="enter_petrol">Enter the cost of refueling here...</string>
    <string name="petrol_cost">Petrol Cost:</string>
    <string name="add_cost">Add Cost</string>
    <string name="profits">Profits:</string>
    <string name="enter_profit">Enter profit here...</string>
    <string name="costs">Costs:</string>
    <string name="enter_cost">Enter cost here...</string>
    <string name="addressee">Addressee:</string>
    <string name="recipient">Recipient:</string>
    <string name="pickupaddress">Pickup Address:</string>
    <string name="deliveryaddress">Delivery Address:</string>
    <string name="enter_addressee">Enter addressee full name here...</string>
    <string name="enter_recipient">Enter recipient full name here...</string>
    <string name="enter_pickup">Enter pickup address here...</string>
    <string name="enter_delivery">Enter delivery address here...</string>
    <string name="register"><u>Register Here!</u></string>
    <string name="registration">Registration</string>
    <string name="register_button">Register</string>
    <string name="restoringpassword">Restoring Password</string>
    <string name="respassword"><u>Sign In Issue?</u></string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pdata">Personal Data</string>
</resources>