<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddWorker">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/enter_surname"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="-30dp"
            android:text="@string/name"
            android:textColor="@color/brown"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_surname"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="-30dp"
            android:text="@string/surname"
            android:textColor="@color/brown"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_email"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="-30dp"
            android:text="TextView"
            android:textColor="@color/brown"
            android:textStyle="bold"
            tools:text="@string/email" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/enter_age"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_age"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="-30dp"
            android:text="@string/age"
            android:textColor="@color/brown"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_age"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:ems="10"
            android:hint="@string/enter_pnumber"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextPhone"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="-30dp"
            android:text="@string/pnumber"
            android:textColor="@color/brown"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_age"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/pl_num"
            android:textColor="@color/mint"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_workplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_sex"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinner_sex"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="-30dp"
            android:text="@string/sex"
            android:textColor="@color/brown"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/spinner_workplace"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="-30dp"
            android:text="@string/workplace"
            android:textColor="@color/brown"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_surname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

    </RelativeLayout>
</FrameLayout>