<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddParcelCourier"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/addressee_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:hint="@string/enter_addressee"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/addressee_data"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="-30dp"
                    android:text="@string/addressee"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pickupaddress_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addressee_data"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:hint="@string/enter_pickup"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/pickupaddress_data"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="-30dp"
                    android:text="@string/pickupaddress"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/recipient_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pickupaddress_data"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:hint="@string/enter_recipient"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/recipient_data"
                    android:layout_marginBottom="-30dp"
                    android:text="@string/recipient"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/deliveryaddress_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipient_data"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:hint="@string/enter_delivery"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/deliveryaddress_data"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="-30dp"
                    android:text="@string/deliveryaddress"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/parcel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/deliveryaddress_data"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/add_parcel"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>