<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDataEmp"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/profit_data"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="-30dp"
                    android:text="@string/profits"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profit_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:hint="@string/enter_profit"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/cost_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profit_data"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:hint="@string/enter_cost"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/cost_data"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="-30dp"
                    android:text="@string/costs"
                    android:textColor="@color/brown"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/data_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cost_data"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/add_data"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>